5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/2171/executions/1684_1099.log
== TEST (2019-04-24 18:50:05) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = float(input("equilatero"))
b = float(input("isosceles"))
c = float(input("escaleno"))

 if((a >= b + c) or (b >= a + c) or (c >= a + b)):
	print("Entradas:, a, "," ,b, "," ,c )
 else :
		if((a == b) and (b == c)):
			print("equilatero")
		else:
			if((a == b) or (b ==c) or (c == a)):
				print("isosceles")
			else:
				print("escaleno")
				
		
	
-- ERROR:
File "XXXX", line 7
    if((a >= b + c) or (b >= a + c) or (c >= a + b)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:50:44) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = float(input("equilatero"))
b = float(input("isosceles"))
c = float(input("escaleno"))

 if((a >= b + c) or (b >= a + c) or (c >= a + b)):
	print("Entradas:, a,b,c )
 else :
		if((a == b) and (b == c)):
			print("equilatero")
		else:
			if((a == b) or (b ==c) or (c == a)):
				print("isosceles")
			else:
				print("escaleno")
				
		
	
-- ERROR:
File "XXXX", line 7
    if((a >= b + c) or (b >= a + c) or (c >= a + b)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:20:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = float(input("equilatero"))
b = float(input("isosceles"))
c = float(input("escaleno"))

 if((a >= b + c) or (b >= a + c) or (c >= a + b)):
	
	else:
		if((a == b) and (b == c)):
			print("equilatero")
		else:
			if((a == b) or (b ==c) or (c == a)):
				print("isosceles")
			else:
				print("escaleno")
				
		
	
-- ERROR:
File "XXXX", line 7
    if((a >= b + c) or (b >= a + c) or (c >= a + b)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
